# t3dsr

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: cmake-multi-platform.yml
include/math/: matrix3.h  vector.h  vector3.h  vector4.h
src/: cam.c  cam.h  draw.c  draw.h  main.c  main.cpp  sleepms.c  sleepms.h
src/math/: common_math.h  mat3.c  mat3.h  mat4.c  mat4.h  mat4.hpp  matrix3.c  matrix3.h  mconfig.h  mv4.c  mv4.h  vec3.c  vec3.h  vec4.c  vec4.h  vector.c  vector3.c  vector3.h  vector4.c  vector4.h
test/: test_main.c  test_vec.c  test_vec.h  test_vec3.c  test_vec3.h  test_vec4.c
tests/: test_vec4f.c  tests.c  tests_config.c  tests_vec3f.c  tests_vec4f.c
